--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-hacker
 show_downloads: false
 permalink: /:year/:month/:title/
-title: testtitle1
+title: [thms@www]
+description: Welcome !
