--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-minimal
 show_downloads: false
 permalink: pretty
 title: thms@www
-description: Welcome !
+description: Welcome to my little internet home.
