--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ show_downloads: false
 permalink: pretty
 title: thms@www
 description: Welcome to my little internet home.
+	     Some articles are in french, but depending on the audience, will be translated.
