--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,4 @@ theme: jekyll-theme-minimal
 show_downloads: false
 permalink: pretty
 title: thms@www
-description: Welcome to my little internet home.
-	     Some articles are in french, but depending on the audience, will be translated.
+description: Welcome to my little internet home. Some articles are in french, but depending on the audience, will be translated.
